--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,11 +229,13 @@
     font-size: calc(var(--font-size) * 1.2);
     color: var(--white);
     text-transform: uppercase;
-}#el-footer-page .el-container-links ul{
+}#el-footer-page .el-container-links ul,
+#el-presentation .el-zone-left .el-block-three ul{
     display: flex;
     flex-direction: column;
     gap: .5rem;
-}#el-footer-page .el-container-links a{
+}#el-footer-page .el-container-links a,
+#el-presentation .el-zone-left .el-block-three a{
     display: flex;
     align-items: center;
     gap: .5rem;
@@ -257,4 +259,171 @@
     z-index: 2;
 }#el-footer-page .el-content-area{
     padding-bottom: 0;
+}
+
+#el-title-overlay .el-content-area{
+    width: 100%;
+    padding: 0;
+}
+#el-title-overlay .el-card{
+    position: relative;
+    width: 100%;
+    height: 300px;
+}#el-title-overlay .el-card::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 1;
+}#el-title-overlay .el-card h1{
+    position: relative;
+    z-index: 2;
+    color: var(--white);
+    top: 50%;
+    left: 1rem;
+    font-family: var(--font-family-title);
+    font-size: calc(var(--font-size) * 1.8);
+    text-transform: uppercase;
+}#el-title-overlay .el-content{
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    left: 1rem;
+    right: 1rem;
+    background-color: rgba(0, 0, 0, .6);
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    gap: .5rem;
+}#el-title-overlay .el-content h2{
+    font-family: var(--font-family-title);
+    font-size: calc(var(--font-size) * .8);
+    text-transform: uppercase;
+    color: var(--white);
+    display: flex;
+    gap: .5rem;
+}#el-title-overlay .el-content h2 .svg-inline--fa{
+    color: var(--blue);
+    font-size: 10px;
+}#el-title-overlay .el-content div{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}#el-title-overlay .el-content a,
+#el-title-overlay .el-content span{
+    font-family: var(--font-family-text);
+    font-size: calc(var(--font-size) * .8);
+    text-decoration: none;
+    text-transform: capitalize;
+    color: var(--white);
+}#el-title-overlay .el-content div .svg-inline--fa{
+    color: var(--blue);
+    font-size: 8px;
+}
+
+#el-presentation .el-zone-left .el-block-one a,
+#el-presentation .el-zone-left .el-block-two a{
+    display: block;
+    width: 100%;
+    padding: 1rem;
+    font-family: "Montserrat Bold";
+    font-size: calc(var(--font-size) * .9);
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: .3s ease;
+    background-color: #f9f9f9;
+    color: #666;
+}#el-presentation .el-zone-left .el-block-one a.el-active,
+#el-presentation .el-zone-left .el-block-one a:hover{
+    background-color: var(--blue);
+    color: var(--white);
+}#el-presentation .el-zone-left .el-block-one .el-container-nav{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}#el-presentation .el-zone-left .el-block-two a{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    background-color: transparent;
+    border: 1px solid #eee;
+}#el-presentation .el-zone-left .el-block-two .svg-inline--fa{
+    font-size: calc(var(--font-size) * 1.3);
+}#el-presentation .el-zone-left .el-block-three a{
+    font-family: var(--font-family-text);
+    color: #666;
+    font-size: calc(var(--font-size) * .9);
+}#el-presentation .el-zone-left .el-block-three a .svg-inline--fa{
+    color: var(--blue);
+}#el-presentation .el-zone-left{
+    display: flex;
+    flex-direction: column;
+    gap: calc(1rem + 20px);
+    width: 100%;
+}
+#el-presentation .el-zone-right{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}#el-presentation .el-zone-right img{
+    width: 100%;
+    max-width: 420px;
+}#el-presentation .el-zone-right .el-container-imgs{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}#el-presentation .el-zone-right .el-grid-partners{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+#el-presentation .el-grid-zone{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: calc(1rem + 20px);
+}#el-presentation .el-grid-zone.el-reverse{
+    flex-direction: column-reverse;
+}#el-presentation .el-paragraphe{
+    line-height: calc(var(--font-size) * 1.8);
+    text-align: justify;
+    color: #8f8f8f;
+}#el-presentation .el-paragraphe strong{
+    color: var(--blue);
+    text-transform: uppercase;
+    font-family: "Montserrat Bold";
+}
+
+.el-new .el-boxImg{
+    width: 100%;
+    aspect-ratio: 3 / 2;
+    position: relative;
+}.el-new h2 a{
+    font-family: var(--font-family-text);
+    font-size: calc(var(--font-size) * .9);
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #8f8f8f;
+}.el-new .el-paragraphe{
+    line-height: calc(var(--font-size) * 1.5) !important;
+    text-align: left !important;
+}.el-new .el-footer{
+    display: flex;
+    justify-content: space-between;
+    color: #8f8f8f;
+    padding-top: 1.5rem;
+    border-top: 1px solid #eee;
+}.el-new .el-footer legend{
+    font-family: 'PlayfairDisplay Regular';
+    font-size: calc(var(--font-size) * .9);
+}.el-new {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}#el-presentation .el-grid-news{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
 }
