--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,7 @@
     gap: 1rem;
     background-color: transparent;
     border: 1px solid #eee;
+    font-family: var(--font-family-text);
 }#el-presentation .el-zone-left .el-block-two .svg-inline--fa{
     font-size: calc(var(--font-size) * 1.3);
 }#el-presentation .el-zone-left .el-block-three a{
