--- a/assets/css/element.css
+++ b/assets/css/element.css
@@ -67,6 +67,12 @@
     font-weight: normal;
     src: local('PlayfairDisplay Regular'), url('../fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff') format('woff');
 }
+@font-face {
+    font-family: 'PlayfairDisplay Italic';
+    font-style: normal;
+    font-weight: normal;
+    src: local('PlayfairDisplay Italic'), url('../fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff') format('woff');
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
