--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,16 +98,16 @@
     padding: 0;
 }
 
-#el-banner-cta{
+.el-banner-cta{
     background-color: var(--blue);
-}#el-banner-cta h2{
-    font-family: "Montserrat Bold";
+}.el-banner-cta h2{
+    font-family: 'PlayfairDisplay Italic';
     color: var(--white);
     text-transform: uppercase;
     font-size: calc(var(--font-size) * 1.2);
     text-align: center;
     line-height: calc(var(--font-size) * 1.8);
-}#el-banner-cta a{
+}.el-banner-cta a{
     font-family: "Montserrat Light";
     color: var(--white);
     font-size: calc(var(--font-size) * .7);
@@ -116,7 +116,7 @@
     text-decoration: none;
     text-transform: uppercase;
     background-color: var(--color-title-dark);
-}#el-banner-cta .el-grid{
+}.el-banner-cta .el-grid{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -427,4 +427,29 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 2rem;
+}
+
+#el-installation-cle-en-main .el-container{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    position: relative;
+}#el-installation-cle-en-main .el-container::before,
+#el-installation-cle-en-main .el-container::after{
+    content: "";
+    position: absolute;
+    top: 50px;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, .2);
+}#el-installation-cle-en-main .el-container::after{
+    top: auto;
+    bottom: -50px;
+}#el-installation-cle-en-main .el-container .el-grid{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+#el-installation-cle-en-main img{
+    width: 100%;
 }
