--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,16 @@
     outline: none;
     border: none;
     cursor: pointer;
+}#el-header-page #el-bottom .el-content-area{
+    padding: 1rem;
+}#el-header-page #el-bottom .el-grid{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}#el-header-page #el-bottom{
+    width: 100%;
 }
-
 #el-hero-slider .el-card{
     position: relative;
     width: 100%;
@@ -532,4 +540,188 @@
     background-color: #e0e0e0;
 }#el-prestation .el-content-area{
     padding: 60px 0 0;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+}
+form .el-row{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}form .el-col{
+    display: flex;
+    width: 100%;
+    height: 40px;
+    position: relative;
+}form .el-textarea{
+    min-height: 100px;
+}form .el-col input,
+form .el-col textarea{
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    background: none;
+    border: 1px solid #e0e0e0;
+    padding: 0 1rem;
+    font-family: var(--font-family-text);
+    font-size: calc(var(--font-size) * .9);
+    resize: vertical;
+}form .el-col textarea{
+    padding: 1rem 1rem;
+}form button{
+    background-color: var(--blue);
+    color: var(--white);
+    padding: .7rem 1rem;
+    text-transform: uppercase;
+    font-family: var(--font-family-text) !important;
+    font-size: calc(var(--font-size) * .85) !important;
+    outline: none;
+    border: 1px solid var(--blue);
+    width: fit-content;
+    cursor: pointer;
+}
+#el-contact .el-left-container,
+#el-contact .el-right-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+#el-contact .el-right-container .el-map{
+    position: relative;
+    width: 100%;
+    aspect-ratio: 2/2;
+}.el-right-container iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}.el-right-container ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}.el-right-container ul a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: calc(var(--font-size) * .9);
+    line-height: calc(var(--font-size) * 1.2);
+    width: fit-content;
+}.el-right-container ul .svg-inline--fa{
+    color: var(--blue);
+    font-size: calc(var(--font-size) * 1);
+}
+#el-contact .el-grid h2{
+    font-family: "Montserrat SemiBold";
+    font-size: calc(var(--font-size));
+    line-height: calc(var(--font-size) * 1.5);
+}
+#el-contact .el-grid{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+#el-contact .ui-tabs .ui-tabs-nav .ui-tabs-anchor{
+    text-transform: uppercase;
+    font-size: calc(var(--font-size) * .78);
+    line-height: calc(var(--font-size) * 1.2);
+}
+
+#el-header-page #el-top .el-langages,
+#el-header-page #el-top .el-social-network{
+    display: flex;
+    align-items: center;
+    gap: 1.3rem;
+    width: 100%;
+}#el-header-page #el-top .el-social-network{
+    gap: .5rem;
+}#el-header-page #el-top .el-social-network a{
+    width: calc(var(--font-size) * 1.3);
+    height: calc(var(--font-size) * 1.3);
+}#el-header-page #el-top .el-social-network .svg-inline--fa{
+    font-size: calc(var(--font-size) * 1);
+}#el-header-page #el-top img{
+    width: calc(var(--font-size) * 1.3);
+}#el-header-page #el-top .el-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: flex-start;
+}#el-header-page #el-top .el-container-two{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}#el-header-page #el-top .el-container-two a{
+    font-size: calc(var(--font-size) * .78);
+    line-height: calc(var(--font-size) * 1.2);
+    font-family: var(--font-family-text);
+    text-decoration: none;
+    color: var(--color-text);
+    display: flex;
+    align-items: center;
+    gap: .25rem;
+}#el-header-page #el-top .el-container-two .svg-inline--fa{
+    color: var(--blue);
+}
+#el-header-page #el-top .el-grid{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}#el-header-page #el-top .el-content-area{
+    padding: 1rem;
+}#el-header-page #el-top{
+    width: 100%;
+    background: #f8f8f8;
+    display: none;
+}
+
+#el-header-page nav{
+    width: 75%;
+}
+#el-menu-desktop{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: flex-end;
+    width: 100%;
+}#el-menu-desktop .el-menu-level-one{
+    font-family: "Montserrat Bold";
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--color-title-dark);
+    font-size: calc(var(--font-size) * .8);
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    position: relative;
+}#el-menu-desktop .el-menu-level-one::before{
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--blue);
+    transition: var(--transition);
+}#el-menu-desktop .el-menu-level-one:hover::before{
+    width: 100%;
+}#el-menu-desktop .el-menu-level-one .svg-inline--fa{
+    font-size: 8px;
+}#el-menu-desktop .el-search{
+    width: 30px;
+    height: 30px;
+    background-color: var(--blue);
+    color: var(--white);
+}#el-menu-desktop .el-search .svg-inline--fa{
+    font-size: calc(var(--font-size));
 }
